syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_create_account.proto";
import "rpc_list_accounts.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/arvalinno/simplebank/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "Simple Bank API"
        version: "1.1"
        contact: {
        name: "Arva"
        url: "https://github.com/arvalinno"
        email: "arvalinno@gmail.com"
        };
    };
};

service SimpleBank {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/create_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to create user"
            summary: "Create new user"
        };
    }
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to login user and get access token & refresh token"
            summary: "Login user"
        };
    }
    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {
        option (google.api.http) = {
            post: "/v1/create_account"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to create account in the logged-in user for specific currency account"
            summary: "Create Account"
        };
    }
    rpc ListAccount (ListAccountRequest) returns (ListAccountResponse) {
        option (google.api.http) = {
            get: "/v1/list_accounts"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to list all accounts that logged-in user has"
            summary: "List Account"
        };
    }
}